Avoid overflow in task title and descriptions elements

--- a/src/style.css
+++ b/src/style.css
@@ -290,11 +290,19 @@ p {
   padding: 24px 32px;
   border: 1px solid var(--Black-25);
   border-radius: 8px;
-  display: flex;
+  display: grid;
+  grid-template-columns: 32px auto max-content;
   align-items: center;
+  min-height: 0;
+  min-width: 0;
   gap: 32px;
   cursor: pointer;
   transition: background-color 200ms;
+}
+
+.task > div {
+  min-height: 0;
+  min-width: 0;
 }
 
 .task:hover {
@@ -309,19 +317,9 @@ p {
   cursor: pointer;
 }
 
-.task .task-information {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  align-items: center;
-  gap: 24px;
-}
-
 .task .main-information {
-  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 12px;
 }
 
 .task .title {
@@ -336,7 +334,6 @@ p {
 
 .task .title,
 .task .description {
-  max-width: 425px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
@@ -344,7 +341,7 @@ p {
 
 .task .sub-information {
   display: flex;
-  gap: 24px;
+  gap: 12px;
   font-weight: 400;
 }
 
